# elektron-gl

./: .gitignore  CMakeLists.txt  README.md  main
include/: elektron_gl.h  geometry.h  model.h  tgaimage.h
renders/: lesson_03.tga  lesson_04.tga  lesson_05.tga  lesson_05_normals.tga  lesson_06.tga  lesson_06_gouraud.tga  render.tga  render_zbuff.tga
scripts/: build.sh  run.sh
src/: elektron_gl.cpp  geometry.cpp  main.cpp  model.cpp  tgaimage.cpp
